--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "rxjs": "~6.4.0",
+    "todomvc-app-css": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
